clusters/gems/flux-system/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-example
  namespace: flux-system
spec:
  hostnames:
  - flux-webhook.abutt.dev
  parentRefs:
  - name: my-gateway
    namespace: default
  rules:
  - backendRefs:
    - kind: Service
      name: webhook-receiver
      namespace: flux-system
      port: 9292
